fix power play pp alignment

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -36,7 +36,7 @@ $theme-colors: (
 }
 
 .power-play {
-  font-size: 0.8rem;
+  font-weight: normal;
   font-style: italic;
   color: $danger;
 }
@@ -55,6 +55,10 @@ $theme-colors: (
 
 .state-powerplay {
   border-right: 4px solid $danger;
+}
+
+.score-card {
+  min-width: 400px !important;
 }
 
 @import "../node_modules/bootstrap/scss/bootstrap";
